--- a/Feel/Components/Form/FormCheck.razor
+++ b/Feel/Components/Form/FormCheck.razor
@@ -13,7 +13,7 @@
         }
         <div class="row">
             <div class="col-2">
-        <InputCheckbox class="@($"cm-toggle {MainTheme}-label")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" id="@InputId" />
+        <InputCheckbox class="@($"cm-toggle {MainTheme}-feel-light")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" id="@InputId" />
             </div>
         </div>
     </div>
