--- a/Feel/wwwroot/css/partials/_presets.scss
+++ b/Feel/wwwroot/css/partials/_presets.scss
@@ -69,8 +69,8 @@
     background: #f953c6;
 }
 
-.caldo-label:checked:after {
-    background: $caldo-label;
+.caldo-feel-light:checked:after {
+    background: $caldo-feel-light;
 }
 
 // ESEMPIO
