--- a/Feel/Components/Form/FormLayout.razor
+++ b/Feel/Components/Form/FormLayout.razor
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
-            <button type="submit" class="@($"btn btn-{MainTheme}-submit text-{MainTheme}-offcanvas-bg")">@SubmitText</button>
+            <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
         </div>
     </EditForm>
 }
