--- a/Feel/Components/Modal.razor
+++ b/Feel/Components/Modal.razor
@@ -9,8 +9,8 @@
 else if(ModalType is ModalType.AggiungiObiettivo || ModalType is ModalType.CambiaTema || ModalType is ModalType.InformazioniApp || ModalType is ModalType.AreaUtente)
 {
 
-    <div class="@($"assistente-{ActionClass} {CssClass} bg-{MainTheme}-messaggi-bg")" data-bs-toggle="modal" data-bs-target="@($"#{ModalId}")">
-        <span class="@($"message-text text-{MainTheme}-messaggi-testo")">@ActionText</span>
+    <div class="@($"assistente {MainTheme} assistente-{ActionClass} {CssClass} bg-{MainTheme}-feel-secondary")" data-bs-toggle="modal" data-bs-target="@($"#{ModalId}")">
+        <span class="@($"message-text text-{MainTheme}-feel-ultra-light")">@ActionText</span>
     </div>
 }
 
@@ -18,12 +18,12 @@ else if(ModalType is ModalType.AggiungiObiettivo || ModalType is ModalType.Cambi
 <!-- Modal -->
 <div class="modal fade" id="@($"{ModalId}")" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="@($"modal-content bg-{MainTheme}-offcanvas-bg")">
+        <div class="@($"modal-content bg-{MainTheme}-feel-primary")">
                 @if(!string.IsNullOrWhiteSpace(Title))
                 {                    
             <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-feel-light="Close"></button>
             </div>
                 }
             <div class="modal-body">
