--- a/Feel/Layout/MainLayout.razor
+++ b/Feel/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
     <CascadingValue Value="MainTheme" Name="MainTheme">
         <CascadingValue Value="Assistente" Name="Assistente">
         <Assistente />
-        <main class="@($"bg-{MainTheme}-sfondo")">
+        <main class="@($"bg-{MainTheme}-feel-main-bg")">
             <div class="main-gradient" />
             <div class="main-content">
                 <section class="main-section">
