--- a/Feel/wwwroot/css/partials/_assistente.scss
+++ b/Feel/wwwroot/css/partials/_assistente.scss
@@ -10,7 +10,18 @@
     }
 }
 
-@mixin assistente($translateY, $translateX, $rotate, $scale: 1) {
+@mixin messaggio-text($color, $active-bg-color) {
+    & .message-text {
+        font-size: 0.8rem;
+        color: $color;
+    }
+
+    &:active {
+        background-color: $active-bg-color !important;
+    }
+}
+
+@mixin assistente-messaggio($translateY, $translateX, $rotate, $scale: 1) {
     position: fixed;
     z-index: 15;
     bottom: 0;
@@ -22,19 +33,11 @@
     transition: transform 300ms ease-out;
     display: none;
     opacity: 0;
-
-    & .message-text {
-        font-size: 0.8rem;
-    }
+ 
 
 
     &:active {
-        background-color: black !important;
         transform: translateY($translateY) translateX($translateX) rotate($rotate) scale(1.1);
-
-        & .message-text {
-            color: white !important;
-        }
     }
 
     &.show {
@@ -45,21 +48,21 @@
 
 
 .assistente-aggiungi-obiettivo {
-    
+
     &.giulio {
-        @include assistente(-18rem, 3rem, -60deg);
+        @include assistente-messaggio(-18rem, 3rem, -60deg);
 
         @include media-query($from-tablet) {
-            @include assistente(-21rem, 3rem, -60deg);
+            @include assistente-messaggio(-21rem, 3rem, -60deg);
         }
     }
 
 
     &.kitty {
-        @include assistente(-13rem, 0, -60deg);
+        @include assistente-messaggio(-13rem, 0, -60deg);
 
         @include media-query($from-tablet) {
-            @include assistente(-17rem, 0, -65deg);
+            @include assistente-messaggio(-17rem, 0, -65deg);
         }
     }
 }
@@ -67,20 +70,20 @@
 .assistente-cambia-tema {
 
     &.giulio {
-        @include assistente(-14rem, 9rem, -40deg, 0.9);
+        @include assistente-messaggio(-14rem, 9rem, -40deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-17rem, 10rem, -40deg, 0.9);
+            @include assistente-messaggio(-17rem, 10rem, -40deg, 0.9);
         }
     }
 
 
 
     &.kitty {
-        @include assistente(-10rem, 6rem, -40deg, 0.9);
+        @include assistente-messaggio(-10rem, 6rem, -40deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-13rem, 6rem, -40deg, 0.9);
+            @include assistente-messaggio(-13rem, 6rem, -40deg, 0.9);
         }
     }
 }
@@ -89,18 +92,18 @@
 .assistente-about {
 
     &.giulio {
-        @include assistente(-9rem, 11rem, -20deg);
+        @include assistente-messaggio(-9rem, 11rem, -20deg);
 
         @include media-query($from-tablet) {
-            @include assistente(-11rem, 13rem, -20deg);
+            @include assistente-messaggio(-11rem, 13rem, -20deg);
         }
     }
 
     &.kitty {
-        @include assistente(-7rem, 10rem, -20deg);
+        @include assistente-messaggio(-7rem, 10rem, -20deg);
 
         @include media-query($from-tablet) {
-            @include assistente(-9rem, 10rem, -20deg);
+            @include assistente-messaggio(-9rem, 10rem, -20deg);
         }
     }
 }
@@ -108,19 +111,24 @@
 .assistente-area-utente {
 
     &.giulio {
-        @include assistente(-2rem, 12rem, 10deg, 0.9);
+        @include assistente-messaggio(-2rem, 12rem, 10deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-4rem, 15rem, 10deg, 0.9);
+            @include assistente-messaggio(-4rem, 15rem, 10deg, 0.9);
         }
     }
 
     &.kitty {
-        @include assistente(-1rem, 10rem, 10deg, 0.9);
+        @include assistente-messaggio(-1rem, 10rem, 10deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-2rem, 12rem, 10deg, 0.9);
+            @include assistente-messaggio(-2rem, 12rem, 10deg, 0.9);
         }
     }
 }
 
+.assistente {
+    &.caldo {
+        @include messaggio-text($caldo-feel-ultra-light, $caldo-feel-primary);
+    }
+}
