--- a/Feel/Components/Assistant/AssistantMessage.razor
+++ b/Feel/Components/Assistant/AssistantMessage.razor
@@ -1,4 +1,5 @@
-﻿<div @onclick="Action">
+﻿@using Feel.Components.Obiettivo
+<div @onclick="Action">
 
     @if(AssistantChoice is ModalType.AggiungiObiettivo)
     {
