--- a/Feel/Pages/Redirect.razor
+++ b/Feel/Pages/Redirect.razor
@@ -3,6 +3,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavManager.NavigateTo("/showcase");
+        NavManager.NavigateTo("/dashboard");
     }
 }
