--- a/Feel/Layout/MainLayout.razor
+++ b/Feel/Layout/MainLayout.razor
@@ -5,8 +5,7 @@
 {
     <CascadingValue Value="MainTheme" Name="MainTheme">
         <CascadingValue Value="Assistente" Name="Assistente">
-            <div class="global-modal-container">
-            </div>
+            <div id="modal-container"></div>
             <Assistente />
             <main class="@($"bg-{MainTheme}-feel-main-bg")">
                 <div class="main-gradient" />
