--- a/Feel/Components/Modal.razor
+++ b/Feel/Components/Modal.razor
@@ -1,4 +1,6 @@
-﻿<!-- Button trigger modal -->
+﻿@inherits MainClassBase
+
+<!-- Button trigger modal -->
 @if(ModalType is ModalType.Button)
 {
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="@($"#{ModalId}")">
