--- a/Feel/Components/Assistant/Assistente.razor
+++ b/Feel/Components/Assistant/Assistente.razor
@@ -1,5 +1,5 @@
-﻿<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="addObiettivo" AssistantChoice="ModalType.AggiungiObiettivo" SitAssistant="SitAssistant" />
-<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="cambiaTema" AssistantChoice="ModalType.CambiaTema" SitAssistant="SitAssistant" />
-<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="areaUtente" AssistantChoice="ModalType.AreaUtente" SitAssistant="SitAssistant" />
-<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="about" AssistantChoice="ModalType.InformazioniApp" SitAssistant="SitAssistant" />
+﻿<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="30" AssistantChoice="ModalType.AggiungiObiettivo" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="07" AssistantChoice="ModalType.CambiaTema" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="2023" AssistantChoice="ModalType.AreaUtente" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="2" AssistantChoice="ModalType.InformazioniApp" SitAssistant="SitAssistant" />
 <img class="assistente" src="@($"/css/images/Assistenti/{IsSelectedClass}-{AssistenteNome}")" @onclick="PadOnAssistant"/>
