--- a/Feel/Components/Form/FormLayout.razor
+++ b/Feel/Components/Form/FormLayout.razor
@@ -4,22 +4,7 @@
 {
     @if(CreateModel is not null)
     {       
-    <EditForm Model="@CreateModel" OnValidSubmit="HandleValidSubmit">
-        <DataAnnotationsValidator />
-        <div class="container-fluid p-0">
-            <div class="row form-display">
-                @ChildContent
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
-            <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
-        </div>
-    </EditForm>
-    }
-    else if (UpdateModel is not null)
-    {
-        <EditForm Model="@UpdateModel" OnValidSubmit="HandleValidSubmit">
+        <EditForm Model="@CreateModel" OnValidSubmit="HandleValidSubmit">
             <DataAnnotationsValidator />
             <div class="container-fluid p-0">
                 <div class="row form-display">
@@ -29,6 +14,43 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
                 <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+            </div>
+        </EditForm>
+    }
+    else if (UpdateModelValore is not null)
+    {
+        <EditForm Model="@UpdateModelValore" OnValidSubmit="HandleValidSubmit">
+            <DataAnnotationsValidator />
+            <div class="container-fluid p-0">
+                <div class="row form-display">
+                    @ChildContent
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
+                <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+            </div>
+        </EditForm>
+    }
+    else if (UpdateModelCheck is not null)
+    {
+        <EditForm Model="@UpdateModelCheck" OnValidSubmit="HandleValidSubmit">
+            <DataAnnotationsValidator />
+            <div class="container-fluid p-0">
+                <div class="row form-display">
+                    @ChildContent
+                </div>
+            </div>
+            <div class="modal-footer">
+                @if(UpdateModelCheckValidation)
+                {                    
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
+                <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+                }
+                else
+                {
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer[ResourceLanguage.Chiudi]</button>
+                }
             </div>
         </EditForm>
     }
