--- a/Feel/Components/Obiettivo/AddObiettivo.razor
+++ b/Feel/Components/Obiettivo/AddObiettivo.razor
@@ -25,9 +25,9 @@
                       @bind-Value="CreateObiettivo.Target" Info="@Localizer[ResourceLanguage.InfoTarget]">
             </FormNumberInteger>
 
-            <FormCheck LabelTitle="@Localizer[ResourceLanguage.CheckPeriodico]"
+            <FormRadio LabelTitle="@Localizer[ResourceLanguage.CheckPeriodico]"
                       @bind-Value="CreateObiettivo.CheckMark" Info="@Localizer[ResourceLanguage.InfoCheck]">
-            </FormCheck>
+            </FormRadio>
 </FormLayout>   
     }
 
