--- a/Feel/Components/Obiettivo/UpdateObiettivo.razor
+++ b/Feel/Components/Obiettivo/UpdateObiettivo.razor
@@ -1,13 +1,22 @@
 ﻿@inherits MainClassBase
 
-@if (EditModel is not null)
-    {       
-<FormLayout UpdateModel="@EditModel" OnSubmit="Save">
-            <FormNumberInteger LabelTitle="@Localizer[ResourceLanguage.Aggiornamento]"
-                      Placeholder="@Localizer[ResourceLanguage.InserisciValore]"
-                      Info="@Localizer[ResourceLanguage.AvvicinatiTarget]"
-                      @bind-Value="EditModel.Importo">
-            </FormNumberInteger>
-</FormLayout>   
+@if (EditModelValore is not null)
+{
+    <FormLayout UpdateModelValore="EditModelValore" OnSubmit="SaveValore">
+        <FormNumberInteger LabelTitle="@Localizer[ResourceLanguage.Aggiornamento]"
+                           Placeholder="@Localizer[ResourceLanguage.InserisciValore]"
+                           Info="@Localizer[ResourceLanguage.AvvicinatiTarget]"
+                           @bind-Value="EditModelValore.Importo">
+        </FormNumberInteger>
+    </FormLayout>   
     }
+else if (EditModelCheck is not null)
+{
+    <FormLayout UpdateModelCheck="EditModelCheck" OnSubmit="SaveCheck" UpdateModelCheckValidation="EditModelCheck.Check">
+
+            <FormCheckBox LabelTitle="@Localizer[ResourceLanguage.Aggiornamento]"           
+            @bind-Value="EditModelCheck.Check">
+            </FormCheckBox>       
+    </FormLayout>
+}
 
