--- a/Feel/wwwroot/css/partials/_assistente.scss
+++ b/Feel/wwwroot/css/partials/_assistente.scss
@@ -128,7 +128,7 @@
 }
 
 .assistente {
-    &.caldo {
-        @include messaggio-text($caldo-feel-ultra-light, $caldo-feel-primary);
+    &.autunno {
+        @include messaggio-text($autunno-feel-ultra-light, $autunno-feel-primary);
     }
 }
