--- a/Feel/wwwroot/css/partials/_checkRadio.scss
+++ b/Feel/wwwroot/css/partials/_checkRadio.scss
@@ -69,8 +69,8 @@
     background: #f953c6;
 }
 
-.caldo-feel-light:checked:after {
-    background: $caldo-feel-light;
+.autunno-feel-light:checked:after {
+    background: $autunno-feel-light;
 }
 
 // ESEMPIO
