--- a/Feel/Components/Assistant/AssistantMessage.razor
+++ b/Feel/Components/Assistant/AssistantMessage.razor
@@ -3,11 +3,10 @@
 
     @if(AssistantChoice is ModalType.AggiungiObiettivo)
     {
-        <CascadingValue Value="ModalId" Name="ModalId">
-        <Modal ActionClass="@ActionClass" CssClass="@CssClass" ActionText="@ActionText" ModalType="AssistantChoice">
-        <AddObiettivo @ref="_addObiettivo"/>
+        <Modal ActionClass="@ActionClass" CssClass="@CssClass" ActionText="@ActionText" ModalType="AssistantChoice" ModalId="@ModalId">
+        <AddObiettivo @ref="_addObiettivo" ModalId="@ModalId" />
         </Modal>
-        </CascadingValue>
+
 }
 </div>
 
