--- a/Feel/Components/Form/FormCheckBox.razor
+++ b/Feel/Components/Form/FormCheckBox.razor
@@ -1,5 +1,6 @@
 ﻿@inherits FormBase
 
+
 <div class="@($"col-{Col} col-md-{ColMd}")">
     <div class="@($"form-group-check {MainTheme}")">
         @if (!string.IsNullOrWhiteSpace(Info))
@@ -13,7 +14,7 @@
         }
         <div class="row">
             <div class="col-2">
-        <InputCheckbox class="@($"cm-toggle {MainTheme}-feel-light")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" id="@InputId" />
+                <InputCheckbox class="@($"cm-checkbox {MainTheme}")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" id="@InputId" />
             </div>
         </div>
     </div>
