--- a/Feel/wwwroot/css/style.scss
+++ b/Feel/wwwroot/css/style.scss
@@ -23,29 +23,29 @@ $custom-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
 $acqua: #B4CDBE;
 $light-gray: #C8C3B9;
 
-// TEMA CALDO
+// TEMA autunno
 
-$caldo-feel-primary: #7E2A0C;
-$caldo-feel-secondary: #B5813C;
-$caldo-feel-light: #F6DCA1;
-$caldo-feel-ultra-light: #fff;
-$caldo-feel-gray: #6c757d;
-$caldo-feel-main-bg: #F8D9A8;
-$caldo-text-disabled: rgba($caldo-feel-ultra-light, 0.7);
-$caldo-feel-error: #F6DCA1;
+$autunno-feel-primary: #7E2A0C;
+$autunno-feel-secondary: #B5813C;
+$autunno-feel-light: #F6DCA1;
+$autunno-feel-ultra-light: #fff;
+$autunno-feel-gray: #6c757d;
+$autunno-feel-main-bg: #F8D9A8;
+$autunno-text-disabled: rgba($autunno-feel-ultra-light, 0.7);
+$autunno-feel-error: #F6DCA1;
 
 
 // Merge nel theme-colors dei nuovi colori
 $theme-colors: map-merge( $theme-colors, ( 
 
-    // TEMA CALDO
-    "caldo-feel-primary": $caldo-feel-primary,
-    "caldo-feel-secondary": $caldo-feel-secondary,
-    "caldo-feel-ligh": $caldo-feel-light,
-    "caldo-feel-gray": $caldo-feel-gray,
-    "caldo-feel-main-bg": $caldo-feel-main-bg,
-    "caldo-text-disabled": $caldo-text-disabled,
-    "caldo-feel-error": $caldo-feel-error
+    // TEMA autunno
+    "autunno-feel-primary": $autunno-feel-primary,
+    "autunno-feel-secondary": $autunno-feel-secondary,
+    "autunno-feel-ligh": $autunno-feel-light,
+    "autunno-feel-gray": $autunno-feel-gray,
+    "autunno-feel-main-bg": $autunno-feel-main-bg,
+    "autunno-text-disabled": $autunno-text-disabled,
+    "autunno-feel-error": $autunno-feel-error
 
 ) );
 
@@ -82,7 +82,8 @@ input[type=number] {
 
 // qui importo i miei partials
 @import "partials/_mixins.scss";
-@import "partials/_presets.scss";
+@import "partials/_checkRadio.scss";
+@import "partials/_checkBox.scss";
 @import "partials/_scrollbar.scss";
 @import "partials/_fonts.scss";
 @import "partials/_mainLayout.scss";
