--- a/Feel/Components/Obiettivo/UpdateObiettivo.razor
+++ b/Feel/Components/Obiettivo/UpdateObiettivo.razor
@@ -1,5 +1,8 @@
 ﻿@inherits MainClassBase
 
+
+<Recap Obiettivo="@Obiettivo"/>
+
 @if (EditModelValore is not null)
 {
     <FormLayout UpdateModelValore="EditModelValore" OnSubmit="SaveValore">
