--- a/Feel/Pages/Redirect.razor
+++ b/Feel/Pages/Redirect.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@* @page "/"
 
 @code {
     protected override void OnInitialized()
@@ -6,3 +6,4 @@
         NavManager.NavigateTo("/dashboard");
     }
 }
+ *@
