--- a/Feel/Components/Form/FormLayout.razor
+++ b/Feel/Components/Form/FormLayout.razor
@@ -11,7 +11,7 @@
                     @ChildContent
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="@($"modal-footer {MainTheme}")">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
                 <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
             </div>
@@ -26,7 +26,7 @@
                     @ChildContent
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="@($"modal-footer {MainTheme}")">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
                 <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
             </div>
@@ -41,7 +41,7 @@
                     @ChildContent
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="@($"modal-footer {MainTheme}")">
                 @if(UpdateModelCheckValidation)
                 {                    
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
